--- a/user-login.html
+++ b/user-login.html
@@ -8,14 +8,117 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/user-login.css">
+    <link rel="stylesheet" href="css/user-login.css">
 
 
 </head>
 <body>
 
-    <form id="registrationForm" action="#" method="post">
-        <h1 class="mb-4">User Login</h1>
+    <!--------------------------------Navbar ---------------------------------->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
+        <div class="container-fluid">
+
+            <a class="navbar-brand ms-5" href="index.html" id="title" style="color: #42875c; font-size: 30px;"><b>Placement Yatra</b></a>
+
+            <!-- Sidebar toggle button -->
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+                aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+                <ul class="navbar-nav">
+
+                    <!-- Technical Dropdown-->
+                    <li class="nav-item dropdown ms-5">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Technical
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown">
+                                <a class="dropdown-item dropdown-toggle" href="#">Programming Coding</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">JAVA</a></li>
+                                    <li><a class="dropdown-item" href="#">C++</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Computer Networking</a></li>
+                            <li><a class="dropdown-item" href="#">Database Management Systems</a></li>
+                            <li><a class="dropdown-item" href="#">Data Structure And Algorithms</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Non-Technical Dropdown -->
+                    <li class="nav-item dropdown ms-5">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Non-Technical
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown">
+                                <a class="dropdown-item dropdown-toggle" href="#">Aptitude</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Quantitative Aptitude</a></li>
+                                    <li><a class="dropdown-item" href="#">Data Interpretationa</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a class="dropdown-item dropdown-toggle" href="#">Reasoning</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">Logical Reasoning</a></li>
+                                    <li><a class="dropdown-item" href="#">Verbal Reasoning</a></li>
+                                    <li><a class="dropdown-item" href="#">Non Verbal Reasoning</a></li>
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Verbal Ability</a></li>
+                        </ul>
+                    </li>
+
+                    <!-- Resources Drop Dwon -->
+                    <li class="nav-item dropdown ms-5">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            Resources
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li class="dropdown">
+                                <a class="dropdown-item dropdown-toggle" href="#">Company Specific</a>
+                                <ul class="dropdown-menu">
+                                    <li><a class="dropdown-item" href="#">TCS</a></li>
+                                    <li><a class="dropdown-item" href="#">Accenture</a></li>
+                                    <li><a class="dropdown-item" href="#">Salesforce</a></li>
+                                    <li><a class="dropdown-item" href="#">Deloitte</a></li>
+
+                                </ul>
+                            </li>
+                            <li><a class="dropdown-item" href="#">Blogs</a></li>
+                            <li><a class="dropdown-item" href="#">Web Stories</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="nav-item ms-5 me-5">
+                        <a class="nav-link active" aria-current="page" href="#">Career Transition</a>
+                    </li>
+
+                    <li class="nav-item ms-5">
+                        <a href="index.html" class="home ms-5">Home</a>
+                    </li>
+                    <li class="nav-item ">
+                        <a href="" class="subscription ms-4">Subscription</a>
+                    </li>
+                </ul>
+
+            </div>
+
+        </div>
+
+    </nav>
+
+    <!--------------------------------Form ---------------------------------->
+
+    <form class="mt-5" id="registrationForm" action="#" method="post">
+        <h1 class="mb-4 text-center" style="color: #89d1a5;">User Login</h1>
 
         <div class="form-group">
             <label for="mail">Email Address</label>
@@ -30,20 +133,22 @@
             
         </div>
 
+        <button type="submit" class="login mt-3">Login</button>
+
         <div class="form-group">
-            <a href="../html/user-registration.html">Create an account</a>
+            <a href="user-registration.html">Create an account</a>
         </div>
 
         
 
-        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- Custom JavaScript for Password Validation -->
-    <script src="../js/user-login.js"></script>
+    <script src="js/user-login.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
 </html>
