--- a/companies.html
+++ b/companies.html
@@ -194,9 +194,11 @@
                     style="background-image: url('https://i1.faceprep.in/feed/images/logo-wells-fargo.png');">
                 </div>
                 <div class="stack bg-image-full"
-                    style="background-image: url('https://i1.faceprep.in/feed/images/intel-logo.png');"></div>
+                    style="background-image: url('https://i1.faceprep.in/feed/images/intel-logo.png');">
+                </div>
                 <div class="stack bg-image-full"
-                    style="background-image: url('https://i1.faceprep.in/feed/images/logo-meta.png');"></div>
+                    style="background-image: url('https://i1.faceprep.in/feed/images/logo-meta.png');">
+                </div>
                 <div class="stack bg-image-full"
                     style="background-image: url('https://i1.faceprep.in/feed/images/logo-microsoft.png');">
                 </div>
@@ -253,7 +255,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Accenture</h5>
                         <p class="card-text">Start Preparing for Accenture</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Accenture.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
