--- a/index.html
+++ b/index.html
@@ -35,79 +35,79 @@
                 <ul class="navbar-nav">
 
                     <!-- Technical Dropdown-->
-                    <li class="nav-item dropdown ms-5">
+                    <li style="padding: 10px;" class="nav-item dropdown ms-5">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Technical
                         </a>
                         <ul class="dropdown-menu">
-                            <li class="dropdown">
+                            <li style="padding: 10px;" class="dropdown">
                                 <a class="dropdown-item dropdown-toggle" href="#">Programming Coding</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">JAVA</a></li>
-                                    <li><a class="dropdown-item" href="#">C++</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">JAVA</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">C++</a></li>
                                 </ul>
                             </li>
-                            <li><a class="dropdown-item" href="#">Computer Networking</a></li>
-                            <li><a class="dropdown-item" href="#">Database Management Systems</a></li>
-                            <li><a class="dropdown-item" href="#">Data Structure And Algorithms</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Computer Networking</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Database Management Systems</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Data Structure And Algorithms</a></li>
                         </ul>
                     </li>
 
                     <!-- Non-Technical Dropdown -->
-                    <li class="nav-item dropdown ms-5">
+                    <li style="padding: 10px;" class="nav-item dropdown ms-5">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Non-Technical
                         </a>
                         <ul class="dropdown-menu">
-                            <li class="dropdown">
+                            <li style="padding: 10px;" class="dropdown">
                                 <a class="dropdown-item dropdown-toggle" href="#">Aptitude</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Quantitative Aptitude</a></li>
-                                    <li><a class="dropdown-item" href="#">Data Interpretationa</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Quantitative Aptitude</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Data Interpretationa</a></li>
                                 </ul>
                             </li>
-                            <li class="dropdown">
+                            <li style="padding: 10px;" class="dropdown">
                                 <a class="dropdown-item dropdown-toggle" href="#">Reasoning</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Logical Reasoning</a></li>
-                                    <li><a class="dropdown-item" href="#">Verbal Reasoning</a></li>
-                                    <li><a class="dropdown-item" href="#">Non Verbal Reasoning</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Logical Reasoning</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Verbal Reasoning</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Non Verbal Reasoning</a></li>
                                 </ul>
                             </li>
-                            <li><a class="dropdown-item" href="#">Verbal Ability</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Verbal Ability</a></li>
                         </ul>
                     </li>
 
                     <!-- Resources Drop Dwon -->
-                    <li class="nav-item dropdown ms-5">
+                    <li style="padding: 10px;" class="nav-item dropdown ms-5">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
                             Resources
                         </a>
                         <ul class="dropdown-menu">
-                            <li class="dropdown">
+                            <li style="padding: 10px;" class="dropdown">
                                 <a class="dropdown-item dropdown-toggle" href="#">Company Specific</a>
                                 <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">TCS</a></li>
-                                    <li><a class="dropdown-item" href="#">Accenture</a></li>
-                                    <li><a class="dropdown-item" href="#">Salesforce</a></li>
-                                    <li><a class="dropdown-item" href="#">Deloitte</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">TCS</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="html/Accenture.html">Accenture</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Salesforce</a></li>
+                                    <li style="padding: 10px;"><a class="dropdown-item" href="#">Deloitte</a></li>
 
                                 </ul>
                             </li>
-                            <li><a class="dropdown-item" href="#">Blogs</a></li>
-                            <li><a class="dropdown-item" href="#">Web Stories</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Blogs</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Web Stories</a></li>
                         </ul>
                     </li>
 
-                    <li class="nav-item ms-5 me-5">
+                    <li style="padding: 10px;" class="nav-item ms-5 me-5">
                         <a class="nav-link active" aria-current="page" href="#">Career Transition</a>
                     </li>
 
-                    <li class="nav-item ms-5">
-                        <a href="user-login.html" class="login ms-5">Login</a>
+                    <li class="nav-item">
+                        <a href="html/user-login.html" class="login ms-5">Login</a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="subscription ms-4">Subscription</a>
@@ -140,7 +140,7 @@
                     <h1><b style="color:#89d1a5;">Placement Yatra, <span style="color: black;"
                                 id="textchange">UpSkill</span></b></h1>
                     <h1><b>Simplified !!</b></h1>
-                    <a href="user-registration.html"><b>Sign Up for Free</b></a>
+                    <a href="html/user-registration.html"><b>Sign Up for Free</b></a>
 
                 </div>
                 <div class="container home-skills mt-3 text-center">
@@ -192,7 +192,7 @@
                         <h5 class="card-title">Companies</h5>
                         <p class="card-text">Prepare for companies like TCS, Accenture, Salesforce, Deloitte with
                             Placement Yatra</p>
-                        <a href="companies.html" class="card-button mt-5">View All Companies</a>
+                        <a href="html/companies.html" class="card-button mt-5">View All Companies</a>
                     </div>
                 </div>
             </div>
@@ -203,7 +203,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Aptitude</h5>
                         <p class="card-text">Learn Aptitude from basic to pro with Placement Yatra</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="/html/Apptitude.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -363,7 +363,7 @@
                         <h5 class="footer-learn-title">Companies</h5>
 
                         <ul class="list-unstyled">
-                            <li><a href="" class="text-light">Accenture</a></li>
+                            <li><a href="html/Accenture.html" class="text-light">Accenture</a></li>
                             <li><a href="" class="text-light">CTS</a></li>
                             <li><a href="" class="text-light">Deloitte</a></li>
                             <li><a href="" class="text-light">Infosys</a></li>
