--- a/html/Accenture.html
+++ b/html/Accenture.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placement Yatra</title>
-    <link rel="stylesheet" href="css/perticularcompanie.css">
+    <link rel="stylesheet" href="../css/perticularcompanie.css">
     <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
         <div class="container-fluid">
 
-            <a class="navbar-brand ms-5" href="index.html" id="title"><b>Placement Yatra</b></a>
+            <a class="navbar-brand ms-5" href="../index.html" id="title"><b>Placement Yatra</b></a>
 
             <!-- Sidebar toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -104,7 +104,7 @@
                     </li>
 
                     <li class="nav-item ms-5">
-                        <a href="user-login.html" class="login ms-5">Login</a>
+                        <a href="../html/user-login.html" class="login ms-5">Login</a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="subscription ms-4">Subscription</a>
@@ -127,7 +127,7 @@
 
     <div class="container mt-5">.</div>
     <div class="container mt-5">
-        <h3 style="color: #89d1a5;">Accenture Preparation</h3>
+        <h3 style="color: #89d1a5;"><a href="companies.html" style="text-decoration: none; color: #89d1a5;">All Companies  > </a>Accenture Preparation</h3>
         <div class="container mt-4" style="background: rgb(242, 249, 249);">
             <div class="container">
                 <img src="" alt="">
@@ -227,19 +227,19 @@
     <div class="container mt-5 sections">
         <div class="row">
             <div class=" col-md-3 col-12">
-                <a onclick="overview()">Overview</a>
+                <a onclick="AccentureOverview()">Overview</a>
             </div>
             <div class=" col-md-2 col-12">
-                <a onclick="Cognative()">Cognitive Assessment</a>
+                <a onclick="AccentureCognitive()">Cognitive Assessment</a>
             </div>
             <div class="col-md-2 col-12">
-                <a onclick="Technical()">Technical Assessment</a>
+                <a onclick="AccentureTechnical()">Technical Assessment</a>
             </div>
             <div class="col-md-2 col-12">
-                <a onclick="Coding()">Coding</a>
+                <a onclick="AccentureCoding()">Coding</a>
             </div>
             <div class="col-md-3 col-12">
-                <a onclick="Communication()">Communication</a>
+                <a onclick="AccentureCommunication()">Communication</a>
             </div>
         </div>
     </div>
@@ -247,7 +247,7 @@
     <div class="container mt-5" style="background: rgb(242, 249, 249);">
         <!--------------------------------overview ---------------------------------->
 
-        <div class="container" id="overview">
+        <div class="container" id="Accentureoverview">
             <h5>Overview</h5>
             <h6>Most Recent Accenture Placement Paper Overview</h6>
             <p></p>Accenture has updated its pattern recently and now the recruitment is divided into 3 different
@@ -390,7 +390,7 @@
 
         <!--------------------------------congative ---------------------------------->
 
-        <div class="container mt-5" id="Cognative">
+        <div class="container mt-5" id="AccentureCognitive">
             <h5>Cognitive Assessment</h5>
             <p>Accenture Test is now divided into several rounds and Cognitive Assessment is the first round of the
                 written
@@ -449,7 +449,7 @@
 
         <!--------------------------------Technical ---------------------------------->
 
-        <div class="container mt-5" id="Technical">
+        <div class="container mt-5" id="AccentureTechnical">
             <h5>Technical Assesment</h5>
             <h6>Accenture Technical Assessment curriculum 2024</h6>
             <p>Here below you will get detailed information about Accenture Technical Assessment Curriculum. This is a
@@ -474,7 +474,7 @@
 
         <!--------------------------------Coding ---------------------------------->
 
-        <div class="container mt-5" id="Coding">
+        <div class="container mt-5" id="AccentureCoding">
             <h5>Coding Assesment</h5>
             Here below you will get detailed information about Accenture Coding Curriculum.
             <ul>
@@ -497,7 +497,7 @@
             </ul>
         </div>
         <!--------------------------------Communication ---------------------------------->
-        <div class="container mt-5 mb-5" id="Communication">
+        <div class="container mt-5 mb-5" id="AccentureCommunication">
             <h5>Communication Assesment</h5>
             <p>Here below you will get detailed information about Accenture Communication Curriculum.
                 Topic judged:</p>
@@ -547,7 +547,7 @@
                         <h5 class="footer-learn-title">Companies</h5>
 
                         <ul class="list-unstyled">
-                            <li><a href="" class="text-light">Accenture</a></li>
+                            <li><a href="../html/Accenture.html" class="text-light">Accenture</a></li>
                             <li><a href="" class="text-light">CTS</a></li>
                             <li><a href="" class="text-light">Deloitte</a></li>
                             <li><a href="" class="text-light">Infosys</a></li>
@@ -575,11 +575,11 @@
                             <p class="" style="color: white;">One Stop Solution for Placement Preparation</p>
 
                             <div class="container social mt-4 mb-5">
-                                <img src="image/facebook-icon.png" class="social-icon" alt="Facebook">
-                                <img src="image/instagram-icon.png" class="social-icon" alt="Instagram">
-                                <img src="image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
-                                <img src="image/twitter-icon.png" class="social-icon" alt="Twitter">
-                                <img src="image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
+                                <img src="../image/facebook-icon.png" class="social-icon" alt="Facebook">
+                                <img src="../image/instagram-icon.png" class="social-icon" alt="Instagram">
+                                <img src="../image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
+                                <img src="../image/twitter-icon.png" class="social-icon" alt="Twitter">
+                                <img src="../image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
                             </div>
                         </a>
                     </div>
@@ -593,7 +593,8 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- My JS -->
-    <script src="js/perticularcompanie.js"></script>
+    <script src="../js/perticularcompanie.js"></script>
+    <script src="../js/index.js"></script>
 </body>
 
 </html>
