--- a/html/Capgemini.html
+++ b/html/Capgemini.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Login</title>
+    <title>Placement Yatra</title>
+    <link rel="stylesheet" href="../css/perticularcompanie.css">
+    <!-- BootStrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
-    <link rel="stylesheet" href="css/user-login.css">
-
-
+    <!-- Font Awesome -->
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 </head>
+
 <body>
 
     <!--------------------------------Navbar ---------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
         <div class="container-fluid">
 
-            <a class="navbar-brand ms-5" href="index.html" id="title" style="color: #42875c; font-size: 30px;"><b>Placement Yatra</b></a>
+            <a class="navbar-brand ms-5" href="../index.html" id="title"><b>Placement Yatra</b></a>
 
             <!-- Sidebar toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -102,53 +104,115 @@
                     </li>
 
                     <li class="nav-item ms-5">
-                        <a href="index.html" class="home ms-5">Home</a>
+                        <a href="../html/user-login.html" class="login ms-5">Login</a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="subscription ms-4">Subscription</a>
+
                     </li>
                 </ul>
 
+                <!-- Search form -->
+                <!-- <form class="d-flex ml-auto ms-5" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                </form> -->
             </div>
 
         </div>
 
     </nav>
 
-    <!--------------------------------Form ---------------------------------->
 
-    <form class="mt-5" id="registrationForm" action="#" method="post">
-        <h1 class="mb-4 text-center" style="color: #89d1a5;">User Login</h1>
+ <!--------------------------------content ---------------------------------->
 
-        <div class="form-group">
-            <label for="mail">Email Address</label>
-            <input type="email" class="form-control" id="mail" name="mail" placeholder="Email Address" required>
-            <div id="emailFeedback" class="form-control-feedback">Invalid email address</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+   <!--------------------------------Footer -------------------------------->
+
+   <footer class="footer-container bg-dark text-light py-5 mt-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="footer-learn-aptitude">
+
+                    <h5 class="footer-learn-title">Learn</h5>
+
+                    <ul class="list-unstyled">
+                        <li><a href="/quantitative-aptitude/" class="text-light">Quantitative Aptitude</a></li>
+                        <li><a href="/data-interpretation/" class="text-light">Data Interpretation</a></li>
+                        <li><a href="/logical-reasoning/" class="text-light">Logical Reasoning</a></li>
+                        <li><a href="/verbal-reasoning/" class="text-light">Verbal Reasoning</a></li>
+                        <li><a href="/non-verbal-reasoning/" class="text-light">Non Verbal Reasoning</a></li>
+                        <li><a href="/verbal-ability/" class="text-light">Verbal Ability</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="footer-companies">
+
+                    <h5 class="footer-learn-title">Companies</h5>
+
+                    <ul class="list-unstyled">
+                        <li><a href="../html/Accenture.html" class="text-light">Accenture</a></li>
+                        <li><a href="" class="text-light">CTS</a></li>
+                        <li><a href="" class="text-light">Deloitte</a></li>
+                        <li><a href="" class="text-light">Infosys</a></li>
+                        <li><a href="" class="text-light">TCS</a></li>
+                        <li><a href="" class="text-light">Wipro</a></li>
+                        <li><a href="" class="text-light">Zoho</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="footer-resources">
+                    <h5 class="footer-learn-title">Resources</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="" class="text-light">Blog</a></li>
+                        <li><a href="" class="text-light">Web Stories</a></li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4">
+                <div class="footer-intro">
+                    <a href="/" class="text-decoration-none">
+                        <h3 class="" style="color: #89d1a5;">Placement Yatra</h3>
+                        <p class="" style="color: white;">One Stop Solution for Placement Preparation</p>
+
+                        <div class="container social mt-4 mb-5">
+                            <img src="../image/facebook-icon.png" class="social-icon" alt="Facebook">
+                            <img src="../image/instagram-icon.png" class="social-icon" alt="Instagram">
+                            <img src="../image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
+                            <img src="../image/twitter-icon.png" class="social-icon" alt="Twitter">
+                            <img src="../image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
+                        </div>
+                    </a>
+                </div>
+            </div>
         </div>
+    </div>
+</footer>
 
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-            <div id="passwordFeedback" class="form-control-feedback">Incorrect Password</div>
-            
-        </div>
-
-        <button type="submit" class="login mt-3">Login</button>
-
-        <div class="form-group">
-            <a href="user-registration.html">Create an account</a>
-        </div>
-
-        
-
-    </form>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-    <!-- Custom JavaScript for Password Validation -->
-    <script src="js/user-login.js"></script>
-    <script src="js/index.js"></script>
-
+<!-- Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+<!-- My JS -->
+<script src="../js/perticularcompanie.js"></script>
+<script src="../js/index.js"></script>
 </body>
+
 </html>
