--- a/html/companies.html
+++ b/html/companies.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Placement Yatra</title>
-    <link rel="stylesheet" href="css/companies.css">
+    <link rel="stylesheet" href="../css/companies.css">
     <!-- BootStrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
         <div class="container-fluid">
 
-            <a class="navbar-brand ms-5" href="index.html" id="title"><b>Placement Yatra</b></a>
+            <a class="navbar-brand ms-5" href="../index.html" id="title"><b>Placement Yatra</b></a>
 
             <!-- Sidebar toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -103,7 +103,7 @@
                     </li>
 
                     <li class="nav-item ms-5">
-                        <a href="user-login.html" class="login ms-5">Login</a>
+                        <a href="../html/user-login.html" class="login ms-5">Login</a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="subscription ms-4">Subscription</a>
@@ -255,7 +255,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Accenture</h5>
                         <p class="card-text">Start Preparing for Accenture</p>
-                        <a href="Accenture.html" class="card-button mt-5">Prepare Now</a>
+                        <a href="../html/Accenture.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Deloitte</h5>
                         <p class="card-text">Start Preparing for Deloitte</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Deloitte.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -280,7 +280,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Infosys</h5>
                         <p class="card-text">Start Preparing for Infosys</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Infosys.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -293,7 +293,7 @@
                     <div class="card-body">
                         <h5 class="card-title">TCS</h5>
                         <p class="card-text">Start Preparing for TCS</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="TCS.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Zoho</h5>
                         <p class="card-text">Start Preparing for Zoho</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Zoho.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -322,7 +322,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Wipro</h5>
                         <p class="card-text">Start Preparing for Wipro</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Wipro.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -335,7 +335,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Capgemini</h5>
                         <p class="card-text">Start Preparing for Capgemini</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="Capgemini.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -348,7 +348,7 @@
                     <div class="card-body">
                         <h5 class="card-title">IBM</h5>
                         <p class="card-text">Start Preparing for IBM</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="IBM.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -399,7 +399,7 @@
                         <h5 class="footer-learn-title">Companies</h5>
 
                         <ul class="list-unstyled">
-                            <li><a href="" class="text-light">Accenture</a></li>
+                            <li><a href="../html/Accenture.html" class="text-light">Accenture</a></li>
                             <li><a href="" class="text-light">CTS</a></li>
                             <li><a href="" class="text-light">Deloitte</a></li>
                             <li><a href="" class="text-light">Infosys</a></li>
@@ -427,11 +427,11 @@
                             <p class="" style="color: white;">One Stop Solution for Placement Preparation</p>
 
                             <div class="container social mt-4 mb-5">
-                                <img src="image/facebook-icon.png" class="social-icon" alt="Facebook">
-                                <img src="image/instagram-icon.png" class="social-icon" alt="Instagram">
-                                <img src="image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
-                                <img src="image/twitter-icon.png" class="social-icon" alt="Twitter">
-                                <img src="image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
+                                <img src="../image/facebook-icon.png" class="social-icon" alt="Facebook">
+                                <img src="../image/instagram-icon.png" class="social-icon" alt="Instagram">
+                                <img src="../image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
+                                <img src="../image/twitter-icon.png" class="social-icon" alt="Twitter">
+                                <img src="../image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
                             </div>
                         </a>
                     </div>
@@ -446,8 +446,8 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <!-- My JS -->
-    <script src="js/companies.js"></script>
-    <script src="js/index.js"></script>
+    <script src="../js/companies.js"></script>
+    <script src="../js/index.js"></script>
 
 </body>
 
