--- a/html/user-login.html
+++ b/html/user-login.html
@@ -1,28 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Registration</title>
+    <title>User Login</title>
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/user-registration.css">
+    <link rel="stylesheet" href="/css/user-login.css">
 
 
 </head>
-
 <body>
 
     <!--------------------------------Navbar ---------------------------------->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm fixed-top">
         <div class="container-fluid">
 
-            <a class="navbar-brand ms-5" href="index.html" id="title" style="color: #42875c; font-size: 30px;"><b>Placement
-                    Yatra</b></a>
+            <a class="navbar-brand ms-5" href="../index.html" id="title" style="color: #42875c; font-size: 30px;"><b>Placement Yatra</b></a>
 
             <!-- Sidebar toggle button -->
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
@@ -90,7 +86,7 @@
                                 <a class="dropdown-item dropdown-toggle" href="#">Company Specific</a>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="#">TCS</a></li>
-                                    <li><a class="dropdown-item" href="#">Accenture</a></li>
+                                    <li><a class="dropdown-item" href="Accenture.html">Accenture</a></li>
                                     <li><a class="dropdown-item" href="#">Salesforce</a></li>
                                     <li><a class="dropdown-item" href="#">Deloitte</a></li>
 
@@ -106,7 +102,7 @@
                     </li>
 
                     <li class="nav-item ms-5">
-                        <a href="index.html" class="home ms-5">Home</a>
+                        <a href="../index.html" class="home ms-5">Home</a>
                     </li>
                     <li class="nav-item ">
                         <a href="" class="subscription ms-4">Subscription</a>
@@ -118,11 +114,12 @@
         </div>
 
     </nav>
-<!--------------------------------Form ---------------------------------->
 
+    <!--------------------------------Form ---------------------------------->
 
-    <form id="registrationForm" class="mt-5" action="#" method="post">
-        <h1 class="mb-4 text-center" style="color: #89d1a5;">User Registration</h1>
+    <div class="container mt-5">.</div>
+    <form class="mt-5" id="registrationForm" action="#" method="post">
+        <h1 class="mb-4 text-center" style="color: #89d1a5;">User Login</h1>
 
         <div class="form-group">
             <label for="mail">Email Address</label>
@@ -133,52 +130,95 @@
         <div class="form-group">
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
-            <div id="passwordFeedback-length" class="form-control-feedback">Password must be at least 8 characters long
-            </div>
-            <div id="passwordFeedback-upper" class="form-control-feedback">Password must contain at least one uppercase
-                letter</div>
-            <div id="passwordFeedback-lower" class="form-control-feedback">Password must contain at least one lowercase
-                letter</div>
-            <div id="passwordFeedback-number" class="form-control-feedback">Password must contain at least one number
-            </div>
-            <div id="passwordFeedback-symbol" class="form-control-feedback">Password must contain at least one special
-                character</div>
+            <div id="passwordFeedback" class="form-control-feedback">Incorrect Password</div>
+            
         </div>
+
+        <button type="submit" class="login mt-3">Login</button>
 
         <div class="form-group">
-            <label for="user">User Name</label>
-            <input type="text" class="form-control" id="user" name="user" placeholder="User Name" required>
+            <a href="user-registration.html">Create an account</a>
         </div>
 
-        <div class="form-group">
-            <label for="mobile">Mobile Number</label>
-            <input type="tel" class="form-control" id="mobile" name="mobile" placeholder="Mobile Number" required>
-            <div id="mobileFeedback" class="form-control-feedback">Invalid mobile number</div>
-        </div>
-
-        <div class="form-group mb-4">
-            <label for="image">Upload Profile Picture</label>
-            <input type="file" class="form-control" id="image" required>
-        </div>
-
-
-        <button type="submit" class="text-center">Submit</button>
-
-        <div class="form-group mb-4 text-center">
-            <a href="user-login.html">Already have an account</a>
-        </div>
+        
 
     </form>
 
+       <!--------------------------------Footer -------------------------------->
+
+       <footer class="footer-container bg-dark text-light py-5 mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="footer-learn-aptitude">
+
+                        <h5 class="footer-learn-title">Learn</h5>
+
+                        <ul class="list-unstyled">
+                            <li><a href="/quantitative-aptitude/" class="text-light">Quantitative Aptitude</a></li>
+                            <li><a href="/data-interpretation/" class="text-light">Data Interpretation</a></li>
+                            <li><a href="/logical-reasoning/" class="text-light">Logical Reasoning</a></li>
+                            <li><a href="/verbal-reasoning/" class="text-light">Verbal Reasoning</a></li>
+                            <li><a href="/non-verbal-reasoning/" class="text-light">Non Verbal Reasoning</a></li>
+                            <li><a href="/verbal-ability/" class="text-light">Verbal Ability</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="footer-companies">
+
+                        <h5 class="footer-learn-title">Companies</h5>
+
+                        <ul class="list-unstyled">
+                            <li><a href="../html/Accenture.html" class="text-light">Accenture</a></li>
+                            <li><a href="" class="text-light">CTS</a></li>
+                            <li><a href="" class="text-light">Deloitte</a></li>
+                            <li><a href="" class="text-light">Infosys</a></li>
+                            <li><a href="" class="text-light">TCS</a></li>
+                            <li><a href="" class="text-light">Wipro</a></li>
+                            <li><a href="" class="text-light">Zoho</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="footer-resources">
+                        <h5 class="footer-learn-title">Resources</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="" class="text-light">Blog</a></li>
+                            <li><a href="" class="text-light">Web Stories</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="footer-intro">
+                        <a href="/" class="text-decoration-none">
+                            <h3 class="" style="color: #89d1a5;">Placement Yatra</h3>
+                            <p class="" style="color: white;">One Stop Solution for Placement Preparation</p>
+
+                            <div class="container social mt-4 mb-5">
+                                <img src="../image/facebook-icon.png" class="social-icon" alt="Facebook">
+                                <img src="../image/instagram-icon.png" class="social-icon" alt="Instagram">
+                                <img src="../image/linkedin-icon.png" class="social-icon" alt="LinkedIn">
+                                <img src="../image/twitter-icon.png" class="social-icon" alt="Twitter">
+                                <img src="../image/whatsapp-icon.png" class="social-icon" alt="Wp" alt="">
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
     <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <!-- Custom JavaScript for Password Validation -->
-    <script src="js/user-registration.js"></script>
+    <script src="js/user-login.js"></script>
     <script src="js/index.js"></script>
 
 </body>
-
 </html>
