--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
                             </li>
                             <li style="padding: 10px;"><a class="dropdown-item" href="#">Computer Networking</a></li>
                             <li style="padding: 10px;"><a class="dropdown-item" href="#">Database Management Systems</a></li>
-                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Data Structure And Algorithms</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Operating Systems</a></li>
+                            <li style="padding: 10px;"><a class="dropdown-item" href="#">Software Engineering</a></li>
+
                         </ul>
                     </li>
 
@@ -162,7 +164,7 @@
 
             <!-- col 2 -->
             <div class="col-md-6 col-12 text-center mt-5">
-                <img src="https://www.o1codingclub.in/static/media/laptop_for_webpage.d10de3456c57725d9b10.png"
+                <img src="image/index.png"
                     style="max-width: 500px; max-height: 300px; margin-top: 50px;" alt="Your Image">
             </div>
 
@@ -203,7 +205,7 @@
                     <div class="card-body">
                         <h5 class="card-title">Aptitude</h5>
                         <p class="card-text">Learn Aptitude from basic to pro with Placement Yatra</p>
-                        <a href="/html/Apptitude.html" class="card-button mt-5">Prepare Now</a>
+                        <a href="html/Apptitude.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
@@ -218,7 +220,7 @@
                         <h5 class="card-title">CS Subjects</h5>
                         <p class="card-text">Prepare for CS Subjects with Placement Yatra and excel in your chosen
                             field.</p>
-                        <a href="#" class="card-button mt-5">Prepare Now</a>
+                        <a href="html/CS-Subjects.html" class="card-button mt-5">Prepare Now</a>
                     </div>
                 </div>
             </div>
